Updates from Overleaf

--- a/fall/204A/2019/10/20191007.tex
+++ b/fall/204A/2019/10/20191007.tex
@@ -27,7 +27,7 @@ Similarly
 Notice also that these coefficients are therefore clearly related by 
 \begin{equation}
 	\braket{\psi_i'}{\psi_j} = \braket{\psi_j}{\psi_i'}^*.
-\end{equation}•
+\end{equation}
 Consider now the inner product
 \begin{align*}
 	\delta_{kj} & = \braket{\psi_k }{\psi_j}\\
