--- a/fall/204A/2019/10/20191009.tex
+++ b/fall/204A/2019/10/20191009.tex
@@ -1,5 +1,8 @@
 \begin{quote}
-    \textit{``If you can ask a general-sounding question that will help you with the homework, by all means do it. I encourage you to be sneaky.''} --Nemanja Kaloper
+    %\textit{``If you can ask a general-sounding question that will help you with the homework, by all means do it. I encourage you to be sneaky.''} --Nemanja Kaloper
+    \textit{``$\hbar$ is 1, the only reason we didn't realize it earlier is because we had to start with bananas and rocks and stuff.''}
+    
+    --Nemanja Kaloper
 \end{quote}
 
 %quick announcement-- send me your best Nemanja quotes
