--- a/fall/204A/2019/10/20191021.tex
+++ b/fall/204A/2019/10/20191021.tex
@@ -1,3 +1,9 @@
+\begin{quote}
+    \textit{``Ignorance is not a sin. Refusing to learn is. The problem isn't making a mistake. The problem is defending a mistake.''}
+    
+    --Nemanja Kaloper
+\end{quote}
+
 %Ignorance is not a sin. Refusing to learn is. The problem isn't making a mistake. The problem is defending a mistake.
 Today we will continue our discussion of differential equations. A brief note on the history of differential equations-- it all was invented/discovered about the same time as calculus by (glorious) Sir Isaac Newton as a mathematical tool to do physics.
 %even biology now is trying to transform itself into a science.
