--- a/fall/204A/2019/10/20191023.tex
+++ b/fall/204A/2019/10/20191023.tex
@@ -1,3 +1,9 @@
+\begin{quote}
+    \textit{``I like to reward you if you want to be living dangerously and be smart like that.''}
+    
+    --Nemanja Kaloper
+\end{quote}
+
 Last time, we were discussing second-order equations of the form
 \begin{equation}
     y'' + P(x) y' + Q(x) y =0.
