--- a/fall/204A/2019/10/20191028.tex
+++ b/fall/204A/2019/10/20191028.tex
@@ -1,3 +1,9 @@
+\begin{quote}
+    \textit{``Dumb things are good because they're repeatable. Just don't do something dumb too often if you can do something clever on the side.''}
+    
+    --Nemanja Kaloper
+\end{quote}
+
 Last time, we began discussing series solutions to differential equations.
 %dumb things are good because they're repeatable. Just don't do something dumb too often if you can do something clever on the side.
 We considered solutions to the classical harmonic oscillator,
@@ -79,7 +85,7 @@ The equation
 \end{equation}
 is called \term{Bessel's equation}. Normally $\nu$ is an integer, but we may as well take it to be a real number. We shall see that as $\nu$ becomes an integer, something goes ``very bad in a very fun way.''
 
-Let's write our series expansion in the Frobenius way. THus
+Let's write our series expansion in the Frobenius way. Thus
 \begin{align}
     y&= \sum_{n=0} a_n x^{n+s}\\
     y'&= \sum_{n=0} (n+s)a_n x^{n+s-1}\\
