--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -38,4 +38,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Monday, October 28, 2019}
     \input{2019/10/20191028.tex}
+\section{Wednesday, October 30, 2019}
+    \input{2019/10/20191030.tex}
 \end{document}
