--- a/fall/215A/2019/10/20191024.tex
+++ b/fall/215A/2019/10/20191024.tex
@@ -7,7 +7,7 @@ So tall and/or wide barriers will suppress the transmission probability. Note al
 So far, we have discussed the bound states of the harmonic oscillator (a confining potential) as well as scattering states (plane wave states) for the free particle. Let us be more careful about what we mean here.
 
 \subsection*{Bound states}
-For potentials which are unbounded at spatial infinity,
+For potentials which are unbounded at spatial infinity, if
 \begin{equation}
     V(x)\to |x|\to \infty,
 \end{equation}
@@ -16,7 +16,7 @@ then the system has bound states such that
     \lim_{x\to \pm\infty} \psi(x)=0.
 \end{equation}
 That is, a bound state is exponentially small outside of some finite region.
-On the other hand, a general system has a mix of bound and scattering states. The classic example is an attractive $\delta$-function potential, where
+On the other hand, a general system wil generically have a mix of bound and scattering states. The classic example is an attractive $\delta$-function potential, where
 \begin{equation}
     V(x) = -V_0 \delta(x).
 \end{equation}
@@ -159,5 +159,5 @@ We claim that while our problem does not have a continuous symmetry, we can take
     \begin{equation}
         \abs*{\cos ka +\frac{V_0}{k} \sin ka} \leq 1,
     \end{equation}
-    and $E=\frac{\hbar^2 k^2}{2m}$. This will give us energy bands with gaps in between, and this is the origin of electronic band structure.
+    and $E=\frac{\hbar^2 k^2}{2m}$. Solving this for the allowed values of $k$ will give us energy bands with gaps in between, and this is the origin of electronic band structure.
 \end{exm}
