--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -38,4 +38,5 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, October 29, 2019}
     \input{2019/10/20191029.tex}
+\section{
 \end{document}
