Math methods commit, November 4. Introducing Green's functions and some notes on the midterm content/scheduling.

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -40,4 +40,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191028.tex}
 \section{Wednesday, October 30, 2019}
     \input{2019/10/20191030.tex}
+    
+\section{Monday, November 4, 2019}
+    \input{2019/11/20191104.tex}
 \end{document}
