--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -38,5 +38,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, October 29, 2019}
     \input{2019/10/20191029.tex}
-\section{
+\section{Thursday, October 31, 2019}
+    \input{2019/10/20191031.tex}
 \end{document}
