PDFs updated! See last commit message(s) for details.

--- a/fall/215A/2019/10/20191031.tex
+++ b/fall/215A/2019/10/20191031.tex
@@ -114,7 +114,7 @@ So this rule agrees on the simple class of density matrices for state $\rho = \k
 
 Hence we can define the evolution of the density matrix in time:
 \begin{equation}
-    \rho(t) = \ketbra{\psi(t)}{\psi(t)} = U(t;t_0) \ketbra{\psi(t_0)}{\psi(t_0)} U(t;t_0)^\dagger = \U(t,t_0) \rho(t_0) U(t,t_0)^\dagger.
+    \rho(t) = \ketbra{\psi(t)}{\psi(t)} = U(t;t_0) \ketbra{\psi(t_0)}{\psi(t_0)} U(t;t_0)^\dagger = U(t;t_0) \rho(t_0) U(t;t_0)^\dagger.
 \end{equation}
 Notice this is different from how other operators transformed in the Heisenberg picture (as $U^\dagger A U$). This tells us that what we've written down should really be interpreted as a Schr\"odinger picture \emph{state operator}. Although the density matrix is an operator, this describes the time evolution of a state.
 
