Commits for math methods and QM. Bell inequalities and more on Green's functions.

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -43,4 +43,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Monday, November 4, 2019}
     \input{2019/11/20191104.tex}
+\section{Wednesday, November 6, 2019}
+    \input{2019/11/20191106.tex}
 \end{document}
