--- a/fall/215A/2019/09/20190925.tex
+++ b/fall/215A/2019/09/20190925.tex
@@ -1,3 +1,4 @@
+\subsection*{Motivation}
 The aim of this course is to revisit quantum mechanics in more depth and more mathematical rigor. The official course text is Shankar's Principles of Quantum Mechanics, but the lecturer also recommends Weinberg's QM, Sakurai, and Leslie Valentine. To really understand the foundations of QM, Dirac's book is also useful.
 
 \subsection*{Origins of QM}
