--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -40,4 +40,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/10/20191029.tex}
 \section{Thursday, October 31, 2019}
     \input{2019/10/20191031.tex}
+    
+\section{Tuesday, November 5, 2019}
+    \input{2019/11/20191105.tex}
+\section{Thursday, November 7, 2019}
+    \input{2019/11/20191107.tex}
 \end{document}
