--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -45,4 +45,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/11/20191105.tex}
 \section{Thursday, November 7, 2019}
     \input{2019/11/20191107.tex}
+
+\section{Tuesday, November 12, 2019}
+    \input{2019/11/20191112.tex}
 \end{document}
