Updates from Overleaf

--- a/fall/204A/2019/11/20191106.tex
+++ b/fall/204A/2019/11/20191106.tex
@@ -216,7 +216,7 @@ Really, we have to keep in mind that the Green's function is defined piecewise, 
 \begin{equation}
     y=-\int_0^x dx' (x-1) x' f(x') -\int_x^1 dx' x(x'-1) f(x').
 \end{equation}
-We can check by taking derivatives with respect to $x$ that this is a solution. What's a bit more fun is to notice that the boundary conditions are correctly satisfied as $x\to 0$ and as $x\to 1$. As $x\to 0$, the first vanishes by the fact that the integration limits coincide ($[0,0]$) and the second vanishes by the fact that $x\to 0$ makes the entire second integral vanish, thanks to our construction $y_L(0)=0$.
+We can check by taking derivatives with respect to $x$ that this is a solution. What's a bit more fun is to notice that the boundary conditions are correctly satisfied as $x\to 0$ and as $x\to 1$. As $x\to 0$, the first vanishes by the fact that the integration limits coincide and the second vanishes by the fact that $x\to 0$ makes the entire second integral vanish, thanks to our construction $y_L(0)=0$.
 \end{exm}
 
-We can also 
+We can also define Green's functions for other boundary conditions like $y(a)=y_i, y(b) =y_f)$. The procedure is similar, and the physical interpretation is simply that we are solving the equation (e.g. the Laplace equation) in the presence of a background field/potential.
