--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -45,4 +45,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/11/20191104.tex}
 \section{Wednesday, November 6, 2019}
     \input{2019/11/20191106.tex}
+    
+\section{Wednesday, November 13, 2019}
+    \input{2019/11/20191113.tex}
 \end{document}
