--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -48,4 +48,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, November 12, 2019}
     \input{2019/11/20191112.tex}
+\section{Thursday, November 14, 2019}
+    \input{2019/11/20191114.tex}
 \end{document}
