--- a/fall/215A/2019/11/20191112.tex
+++ b/fall/215A/2019/11/20191112.tex
@@ -1,4 +1,4 @@
-Midterm scores are back, and basically everyone did great! As it turns out, what we saw in the midterm (two potentially different Hamiltonians with identical spectra apart from the ground state) was a special case of supersymmetric quantum mechanics, a topic we won't cover further. That is, the Hamiltonian takes the form $\cH = \set{Q,Q^\dagger}$, i.e. in terms of some
+Midterm scores are back, and basically everyone did great! As it turns out, what we saw in the midterm (two potentially different Hamiltonians with identical spectra apart from the ground state) was a special case of supersymmetric quantum mechanics, a cool topic that we unfortunately won't cover further. That is, the Hamiltonian takes the form $\cH = \set{Q,Q^\dagger}$, i.e. in terms of some
 \begin{equation}
     \cH = \begin{pmatrix}
         H &\\
@@ -7,11 +7,11 @@ Midterm scores are back, and basically everyone did great! As it turns out, what
     \quad Q = \begin{pmatrix}
     0 & 0\\
     A & 0
-    \end{pmatrix},
+    \end{pmatrix},\quad
     Q^\dagger = \begin{pmatrix}
     0 & A^\dagger \\
-    0 & 0.
-    \end{pmatrix}
+    0 & 0
+    \end{pmatrix}.
 \end{equation}
 For instance, the P\"oschl-Teller potential we explored as a bonus problem on Homework 5 has a general solution of some hypergeometric functions, but its spectrum reduces to that of the infinite square well for the right values of its parameters.
 
@@ -112,7 +112,7 @@ For the free particle ($\hat H_\text{free} = \frac{\hat p^2}{2m}$), we can compu
 where we have replaced $\hat p$ by its eigenvalue $p$ and performed one of the $p$ integrals with the delta function from $\braket{p}{p'}$. Hence we get
 \begin{align}
     K(x,t' x',t') &= \int_{-\infty}^\infty \frac{dp}{(2\pi \hbar)} e^{\frac{i}{\hbar} (x-x') p} e^{-\frac{i}{\hbar } \frac{p^2}{2m}(t-t')}\\
-        &= \frac{m}{2\pi i \hbar (t-t')} e^{\frac{im}{2\hbar } \frac{(x-x')^2}{t-t'}}.
+        &= \sqrt{\frac{m}{2\pi i \hbar (t-t')}} e^{\frac{im}{2\hbar } \frac{(x-x')^2}{t-t'}}.\label{freeparticlepropagator}
 \end{align}
 We've performed a Gaussian integral to evaluate the $dp$ integral.%
     \footnote{Strictly, we need to use analytic continuation and an $i\epsilon$ prescription. That is, if we're being careful, we perform this as an integral in the complex plane so that it will actually converge.}
@@ -141,14 +141,14 @@ It is clear that
 \end{equation}
 By inserting a complete set of states at every step, we see that
 \begin{equation}
-    \braket{x_f,t_f}{x_i}{t_i} =\int dx_N \ldots \int dx_1 \braket{x_f,t_f}{x_N,t_N} \braket{x_N,t_N}{x_{N-1},t_{N_1}},\ldots \braket{x_1,t_1}{x_i,t_i}.
+    \braket{x_f,t_f}{x_i,t_i} =\int dx_N \ldots \int dx_1 \braket{x_f,t_f}{x_N,t_N} \braket{x_N,t_N}{x_{N-1},t_{N_1}},\ldots \braket{x_1,t_1}{x_i,t_i}.
 \end{equation}
 We can then take the limit as $N\to \infty$ and $\delta t \to dt$ becomes infinitesimally small. To evaluate this expression, consider a single one of these inner products $\braket{x_n,t_n} {x_{n-1},t_{n-1}}$. It is
 \begin{align}
     \braket{x_n,t_n} {x_{n-1},t_{n-1}} &= \bra{x_n} e^{-\frac{i}{\hbar} \hat H(t_n-t_{n-1})} \ket{x_n-1}\\
         &= \bra{x_n} e^{-\frac{i}{\hbar} \delta t \hat H} \ket{x_{n-1}}
 \end{align}
-What's difficult about evaluating the Hamiltonian on position eigenstates is that
+What's difficult about evaluating the Hamiltonian on position eigenstates is that in general, we cannot split up the exponential:
 \begin{equation}
     e^{-\frac{i}{\hbar} \delta t \hat H} = e^{-\frac{i}{\hbar}\delta t( \frac{\hat p^2}{2m} + V(\hat x))} \neq e^{-\frac{i}{\hbar} \delta t \frac{\hat p^2}{2m}} \cdot e^{-\frac{i}{\hbar} V(\hat x) \delta t}.
 \end{equation}
@@ -162,12 +162,12 @@ and they are higher-order in $\delta t$, so we can safely neglect them as $\delt
 \begin{align}
     \braket{x_n,t_n} {x_{n-1},t_{n-1}} &= \bra{x_n} e^{-\frac{i}{\hbar} \delta t \frac{\hat p^2}{2m}} \cdot e^{-\frac{i}{\hbar} V(\hat x) \delta t} \ket{x_{n-1}} + O(\delta t^2)\\
         &= \int dp \bra{x_n} e^{-i\frac{ \hat p^2}{2m} \delta t} \ket{p}\braket{p}{x_{n-1}} e^{-\frac{i}{\hbar} V(x_{n-1})\delta t}\\
-        &= \frac{1}{2\pi \hbar} \int_{-\infty}^\infty dp \, e^{-\frac{i}{2m \hbar} p^2 \delta t + \frac{i}{\hbar} p(x_n - x_{n-1})} \times e^{-\frac{i}{\hbar} V(x_{n-1})\delta t}\\
+        &= \frac{1}{2\pi \hbar} \int_{-\infty}^\infty dp \, \exp\paren{-\frac{i}{2m \hbar} p^2 \delta t + \frac{i}{\hbar} p(x_n - x_{n-1})} \times \exp\paren{-\frac{i}{\hbar} V(x_{n-1})\delta t}\\
         &= \sqrt{\frac{m}{2\pi \hbar \delta t}} \exp\paren{\frac{im}{2\hbar} \bkt{\frac{(x_n-x_{n-1})^2}{\delta t}} -\frac{i V(x_{n-1})\delta t}{\hbar}}.
 \end{align}
 We have inserted a complete set of states and performed the Gaussian integrals, as before. Hence we can now put this back into our expression for the overall propagator. That is,
 \begin{align}
-    \braket{x_f,t_f}{x_i}{t_i} &= \int dx_N \ldots \int dx_1 \paren{\frac{m}{2\pi \hbar i \delta t}}^{\frac{N+1}{2}} \exp \bkt{\frac{i\delta t}{\hbar} \paren{\sum_{n=0}^N \frac{m}{2} \frac{(x_n-x_{n-1})^2}{\delta t^2} - V(x_{n-1})}}\\
-        &= \exp \paren{\frac{i}{\hbar} \int_{t_i}^{t_f} dt \bkt{ \frac{m}{2} \paren{\frac{dx}{dt}}^2 -V(x)}},
+    \braket{x_f,t_f}{x_i,t_i} &= \int dx_N \ldots \int dx_1 \paren{\frac{m}{2\pi \hbar i \delta t}}^{\frac{N+1}{2}} \exp \bkt{\frac{i\delta t}{\hbar} \paren{\sum_{n=0}^N \frac{m}{2} \frac{(x_n-x_{n-1})^2}{\delta t^2} - V(x_{n-1})}}\\
+        &= \int [\cD x]\exp \paren{\frac{i}{\hbar} \int_{t_i}^{t_f} dt \bkt{ \frac{m}{2} \paren{\frac{dx}{dt}}^2 -V(x)}},
 \end{align}
 and we see that when we discretized time, our manipulations exactly performed the Legendre transform to take us from the Hamiltonian to the Lagrangian.
