--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -48,4 +48,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Wednesday, November 13, 2019}
     \input{2019/11/20191113.tex}
+\section{Monday, November 18, 2019}
+    \input{2019/11/20191118.tex}
 \end{document}
