Updates from Overleaf

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -50,4 +50,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/11/20191112.tex}
 \section{Thursday, November 14, 2019}
     \input{2019/11/20191114.tex}
+    
+\section{Tuesday, November 19, 2019}
+    \input{2019/11/20191119.tex}
 \end{document}
