--- a/fall/204A/2019/10/20191030.tex
+++ b/fall/204A/2019/10/20191030.tex
@@ -116,7 +116,7 @@ we see that this is a 1D Schrodinger equation in a potential like $1-1/x^2$, at 
 This is a quadratic hyperbolic well. Conversely, nothing prevents us from taking $\nu$ to be imaginary, in which case we could have a barrier instead of a well.
 %It's like kids tobogganing down a hyperbolic slope.
 %this is called gravitational blueshift.
-We can see now that in the case of imaginary $\nu$, we know what to expect. We send in a wavepacket towards the barrier which gets increasingly redshifted as it approaches the barrier. As it hits its classical turning point, the sines and cosines (complex exponentials) turn into sinhs and coshs (real exponentials). Hence we know what the asymptotic behavior of Bessel functions should based on our intuition for the Schr\"odinger equation.
+We can see now that in the case of imaginary $\nu$, we know what to expect. We send in a wavepacket towards the barrier which gets increasingly redshifted as it approaches the barrier. As it hits its classical turning point, the sines and cosines (complex exponentials) turn into sinhs and coshs (real exponentials). Hence we know what the asymptotic behavior of Bessel functions should be based on our intuition for the Schr\"odinger equation.
 
 \subsection*{Inhomogeneous second-order linear equations}
 Finally, the last thing to do with these sorts of equations is to introduce a source term $J(x)$, such that
