--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -53,4 +53,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Tuesday, November 19, 2019}
     \input{2019/11/20191119.tex}
+\section{Thursday, November 21, 2019}
+    \input{2019/11/20191121.tex}
 \end{document}
