Notes on symmetries in QM.

--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -55,4 +55,7 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     \input{2019/11/20191119.tex}
 \section{Thursday, November 21, 2019}
     \input{2019/11/20191121.tex}
+    
+\section{Tuesday, November 26, 2019}
+    \input{2019/11/20191126.tex}
 \end{document}
