--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -52,4 +52,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Monday, November 18, 2019}
     \input{2019/11/20191118.tex}
+%Wednesday, November 20 was the midterm
+
+\section{Monday, November 25, 2019}
+    \input{2019/11/20191125.tex}
 \end{document}
