Updates from Overleaf

--- a/fall/204A/204A-notes-ucd.tex
+++ b/fall/204A/204A-notes-ucd.tex
@@ -56,4 +56,11 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Monday, November 25, 2019}
     \input{2019/11/20191125.tex}
+\section{Wednesday, November 27, 2019}
+    \input{2019/11/20191127.tex}
+    
+\section{Monday, December 2, 2019}
+    \input{2019/12/20191202.tex}
+\section{Wednesday, December 4, 2019}
+    \input{2019/12/20191204.tex}
 \end{document}
