--- a/fall/215A/215A-notes-ucd.tex
+++ b/fall/215A/215A-notes-ucd.tex
@@ -58,4 +58,10 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
     
 \section{Tuesday, November 26, 2019}
     \input{2019/11/20191126.tex}
+%Thursday was the Thanksgving holiday
+
+\section{Tuesday, December 3, 2019}
+    \input{2019/12/20191203.tex}
+\section{Thursday, December 5, 2019}
+    \input{2019/12/20191205.tex}
 \end{document}
